update slurm for LL

--- a/drake_clst/slurm_clustermq_LL.tmpl
+++ b/drake_clst/slurm_clustermq_LL.tmpl
@@ -1,12 +1,13 @@
 #!/bin/sh
 #SBATCH --job-name={{ job_name }}           # job name
 #SBATCH --output={{ log_file | /dev/null }} # you can add .%a for array index
-#SBATCH --nodes=1
-#SBATCH --ntasks=1
 #SBATCH --error={{ log_file | /dev/null }}  # log file
+#SBATCH --mem-per-cpu={{ memory | 16384 }}  # memory
+#SBATCH --cpus-per-task 4                   # for parallelization
 #SBATCH --array=1-{{ n_jobs }}              # job array
-#SBATCH --time=72:00:00                     # time
-#SBATCH --mail-type=all
+#SBATCH --time 72:00:00                     # time
 #SBATCH --mail-user=nbrazeau@med.unc.edu
-ulimit -v $(( 1024 * {{ memory | 24576 }} ))
+#SBATCH --mail-type=all
+
+ulimit -v $(( 1024 * {{ memory | 32768 }} ))
 CMQ_AUTH={{ auth }} R --no-save --no-restore -e 'clustermq:::worker("{{ master }}")'
