--- a/drake_clst/slurm_clustermq_LL.tmpl
+++ b/drake_clst/slurm_clustermq_LL.tmpl
@@ -4,9 +4,8 @@
 #SBATCH --output={{ log_file | /dev/null }} # you can add .%a for array index
 #SBATCH --error={{ log_file | /dev/null }}  # log file
 #SBATCH --mem-per-cpu={{ memory | 16384 }}  # memory
-#SBATCH --cpus-per-task 4                   # for parallelization
 #SBATCH --array=1-{{ n_jobs }}              # job array
-#SBATCH --time 7-00:00:00                     # time
+#SBATCH --time 96:00:00                     # time
 #SBATCH --mail-user=nbrazeau@med.unc.edu
 #SBATCH --mail-type=all
 
